# ssh-agent-switcher

./: .gitignore  COPYING  Cargo.toml  Makefile  NEWS.md  README.md  flake.nix  inttest.sh  justfile  ssh-agent-switcher.1  unix-socket-switcher.1
.config/flakebox/: id
.config/selfci/: ci.sh
.github/: README.md
.github/workflows/: distcheck.sh  flakebox-ci.yml
src/: find.rs  lib.rs  main.rs
tests/: integration.rs  inttest.rs  systemd.rs
