[package]
name = "unix-socket-switcher"
version = "1.0.1"
license = "BSD-3-Clause"
authors = ["Julio Merino <julio@meroh.net>"]
categories = ["command-line-utilities"]
keywords = ["unix-socket", "proxy", "ssh-agent", "tmux"]
description = "Unix socket proxy/switcher daemon with glob-based target discovery"
homepage = "https://github.com/dpc/unix-socket-switcher/"
repository = "https://github.com/dpc/unix-socket-switcher.git"
readme = "README.md"
edition = "2024"

[dependencies]
daemonize = "0.5"
glob = "0.3"
libc = "0.2"
listenfd = "1"
log = "0.4"

[dependencies.getoptsargs]
version = "0.1"
features = ["env_logger"]

[dependencies.tokio]
version = "1"
features = ["io-util", "macros", "net", "rt-multi-thread", "signal"]

[dev-dependencies]
tempfile = "3"

[profile.ci]
debug = "line-tables-only"
incremental = false
inherits = "dev"
lto = "off"
